--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+a {
+  color:blue;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +17,52 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1 {
+  width: 582px;
+  height: 36px;
+  font-family: 'SF UI Display';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 150%;
+  color: #353238;
+  margin: 45px 0;
+}
+
+.logo {
+  width: 474.46px;
+  height: 70px;
+}
+
+.mainText {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  width: 940px;
+  height: 375px;
+  text-align: justify;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #353238;
+}
+
+.form {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 40px 20px;
+  width: 440px;
+  height: auto;
+  background: #FFFFFF;
+  box-shadow: 0px 5px 20px rgba(53, 50, 56, 0.14);
+  border-radius: 8px;
+}
+
+
