--- a/src/App.css
+++ b/src/App.css
@@ -1,97 +1,29 @@
 .App {
   display: flex;
+  justify-content: center;
   align-items: center;
   padding: 60px 0px;
-  gap: 60px;
-  width: 1440px;
-  height: 731px;;
   border-radius: 8px;
-  margin: 0 auto;
-}
-/* 
-.mainText {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 40px;
-  width: 940px;
-  height: 375px;
-} */
-
-
-
-
-/* .mainButtonAdd{
-  height: 40px;
-  padding: 0 10px;
-  font-size: 15px;
-  color: #4a5a70;
-  background: #e5eaf3;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: 600;
-  transition: all .3s ease;
-  outline: none;
-  margin: 15px;
-  width: 25vh;
+  /* margin: 0 auto; */
 }
 
-.mainButtonAdd:hover {
-  background: #d2dcee;
-}
-.mainButtonDel{
-  height: 40px;
-  padding: 0 10px;
-  font-size: 15px;
-  color: #4a5a70;
-  background: #f68d73;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: 600;
-  transition: all .3s ease;
-  outline: none;
-  margin: 15px;
-  width:25vh;
+tbody tr:nth-child(odd) {
+  background-color: #ebb68f;
 }
 
-.mainButtonDel:hover {
-  background: #f57373;
+table {
+  position: relative;
+  border-collapse: collapse;
 }
 
-.button {
-  font-size: 20px;
-  white-space: nowrap;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-  transition: background-color 0.3s linear 0s;
-  color: #fff;
-  height: 40px;
-  background: #617999;
-  width:10vh;
-  margin: 2px 20px 2px;
+thead th {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: #FF8630;
 }
 
-.button:hover {
-  transition: all .3s ease;
-  color: #ff7618;
-  background: #fff;
-  border: 2px solid #ff7618;
+td {
+  border: 1px solid #070707;
 }
-
-.counter {
-  display: flex;
-  justify-content: center;
-  margin: 10px;
-}
-
-.count {
-  display:flex;
-  align-items: center;
-  font-size: 20px;
-  
-}
-.countInterval {
-  font-size: 20px;
-} */
